sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:6: error: not found: value c1
  while (c1 || c2){
         ^AlgCocktailSort3:6: error: not found: value c2
  while (c1 || c2){
               ^