sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.code
def cocktailSort3() {
  var c:Boolean = true
  var n:Int = getNombreValeurs()-1
  var f:Int = 0
  while (c1 || c2){
    c=false
    for (i<- 0 to n-f){
      if (plusPetit(i+1,i)){
        echange(i,i+1)
        c = true
      }
    }
    if (!c){return}
    for (i <- n-f to 0){
      if (plusPetit(i+1,i)){
        echange(i-1,i)
        c = true
    	}
     }
   }
  
}